# mnyxls

./: .gitignore  LICENSE  Makefile  README.md  mnyxls.code-workspace  mnyxls.sample.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pytest.yml  release.yml
src/mnyxls/: __init__.py  __main__.py  configtypes.py  currencydecimal.py  dbcore.py  dbschema.py  dbsqlite.py  dbviews.py  jinja.py  mysqlstmt_createview.py  mysqlstmt_selectand.py  mysqlstmt_upsert.py  report.py  report_balances.py  report_balancesdetails.py  report_investmenttxns.py  report_loanterms.py  report_mixinasofcolumns.py  report_monthly.py  report_spending.py  report_txns.py  reports.py  rewritetxns.py  shared.py  shared_txns.py  workbook.py  worksheet.py  worksheet_accounts.py  worksheet_categories.py  worksheet_naked_categories.py  worksheet_singlepayee_categories.py  worksheet_txns.py  worksheet_txns_base.py  worksheet_txns_pivot.py
tests/: TESTING.md  __init__.py  conftest.py  gentestreports.py  testutils.py
tests/test_reports/test_config_eras/test_config_eras_overlap/: mnyxls.yaml  run_test.py
tests/test_reports/test_config_eras/test_config_eras_unassigned/: mnyxls.yaml  run_test.py
tests/test_reports/test_config_none/: expected_result.xlsx  run_test.py
tests/test_reports/test_config_unnamed/: expected_result.xlsx  mnyxls.yaml  run_test.py
tests/test_reports/test_db_named/: run_test.py
tests/test_reports/test_db_unnamed/: run_test.py
tests/test_reports/test_no_output/: run_test.py
tests/test_reports/test_opts/: run_test.py
tests/test_reports/test_rewrites/test_baddate/: mnyxls.yaml  run_test.py
tests/test_reports/test_rewrites/test_mod_payee/: mnyxls.yaml  run_test.py
tests/test_reports/test_rewrites/test_nofields/: mnyxls.yaml  run_test.py
tests/test_reports/test_rewrites/test_noselect/: mnyxls.yaml  run_test.py
tests/test_xls/sheet_accounts/test_basic/: expected_result.xlsx  mnyxls_workbook.yaml  run_test.py
tests/test_xls/sheet_accounts/test_select/: expected_result.xlsx  mnyxls_workbook.yaml  run_test.py
tests/test_xls/sheet_txns/test_basic/: expected_result.xlsx  mnyxls_workbook.yaml  run_test.py
tests/test_xls/test_empty_sheet/: expected_result.xlsx  mnyxls_workbook.yaml  run_test.py
tests/test_xls/test_no_sheets/: expected_result.xlsx  mnyxls_workbook.yaml  run_test.py
tests/test_xls/test_xls_unnamed/: run_test.py
tests/testresources/: mnyxls_tests.yaml
tests/testresources/sample_reports/: txns_2018_2022.csv  txns_2018_2022.sqlite3
(+173 files in other folders)
